--- a/static/style.css
+++ b/static/style.css
@@ -73,6 +73,10 @@ main {
     justify-content: center;
     align-items: center;
 }
+
+.logo {
+    max-width: 10rem;
+}
 /* FORMULARIO */
 
 .formDiv {
@@ -174,8 +178,38 @@ scale: 1.1;
     color: var(--verdeMuyClaro);
 }
 
+/* PARQUES */
 
+.fitxa-parke {
+    display: flex;
+    flex-direction: column;
+    margin: 1rem;
+    padding: 1rem;
+    border-radius: 0.7rem;
+    max-width: 30rem;
+    border: 3px solid var(--verdeOscuro);
+    box-shadow: 0px 0px 7px 1px rgba(23, 65, 11,0.75);
+}
+.imgP {
+    width: 100%;
+    border-radius: 0.7rem;
+}
 
+select {
+    font-size: 1.5rem;
+    border-radius: 0.7rem;
+    padding: 0.5rem;
+    background-color: var(--verdeMuyClaro);
+    color: var(--verdeOscuro);
+}
+
+.parques {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem; 
+}
 /* MENU NORMAL */
 
 .navbarStatic {
@@ -223,6 +257,8 @@ footer {
 	font-weight:bold;
     background-color: var(--verdeClaro);
 }
+
+
 
 /* MENU HAMBURGUESA */
 
