--- a/static/style.css
+++ b/static/style.css
@@ -195,6 +195,12 @@ scale: 1.1;
     border: 3px solid var(--verdeOscuro);
     box-shadow: 0px 0px 7px 1px rgba(23, 65, 11,0.75);
 }
+
+.fitxa-parke:hover {
+    cursor: pointer;
+    border: 4px solid var(--verdeOscuro);
+    box-shadow: 0px 0px 7px 3px rgba(66, 207, 26, 0.75);
+}
 .imgP {
     width: 100%;
     border-radius: 0.7rem;
